--- a/package.json
+++ b/package.json
@@ -19,17 +19,16 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-query": "^3.13.4",
+    "react-query": "^3.13.8",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "recoil": "^0.2.0",
     "redux": "^4.0.5",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "NODE_ENV=development react-scripts start",
+    "start": "NODE_ENV=development PORT=3050 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
