--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "formik": "^2.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.0.9",
     "react-query": "^3.13.8",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
@@ -53,7 +53,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react-helmet": "^6.1.1",
     "@types/react-router-dom": "^5.1.7"
   }
 }
