--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
+    "dotenv": "^9.0.2",
     "emotion-reset": "^3.0.0",
     "formik": "^2.2.6",
     "lodash.debounce": "^4.0.8",
