--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "emotion-reset": "^3.0.0",
     "formik": "^2.2.6",
     "lodash.debounce": "^4.0.8",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.0.9",
+    "react-moment": "^1.1.1",
     "react-query": "^3.13.8",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
