--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.0.9",
+    "react-mentions": "^4.3.0",
     "react-moment": "^1.1.1",
     "react-query": "^3.13.8",
     "react-redux": "^7.2.3",
@@ -58,6 +59,7 @@
   },
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.6",
+    "@types/react-mentions": "^4.1.1",
     "@types/react-router-dom": "^5.1.7"
   }
 }
