--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "formik": "^2.2.6",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.29.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "quill-mention": "^3.0.4",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "react-helmet-async": "^1.0.9",
     "react-mentions": "^4.3.0",
     "react-moment": "^1.1.1",
     "react-query": "^3.13.8",
+    "react-quill": "^1.3.5",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -65,7 +67,6 @@
   },
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.6",
-    "@types/react-mentions": "^4.1.1",
     "@types/react-router-dom": "^5.1.7",
     "eslint-plugin-react-hooks": "^4.2.0"
   }
