--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-mentions": "^4.3.0",
     "react-moment": "^1.1.1",
     "react-query": "^3.13.8",
-    "react-quill": "^1.3.5",
+    "react-quill": "^2.0.0-beta.2",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -66,7 +66,9 @@
     ]
   },
   "devDependencies": {
+    "@types/html-to-text": "^8.0.1",
     "@types/lodash.debounce": "^4.0.6",
+    "@types/react-mentions": "^4.1.3",
     "@types/react-router-dom": "^5.1.7",
     "eslint-plugin-react-hooks": "^4.2.0"
   }
