--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "autolinker": "^3.14.3",
     "axios": "^0.21.1",
     "dotenv": "^9.0.2",
     "emotion-reset": "^3.0.0",
     "formik": "^2.2.6",
+    "html-react-parser": "^1.2.7",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.29.1",
     "quill-mention": "^3.0.4",
