--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "emotion-reset": "^3.0.0",
     "formik": "^2.2.6",
     "html-react-parser": "^1.2.7",
+    "lightweight-charts": "^3.5.0",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.29.1",
     "quill-mention": "^3.0.4",
