--- a/package.json
+++ b/package.json
@@ -33,14 +33,18 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "reconnecting-websocket": "^4.4.0",
     "redux": "^4.0.5",
     "typescript": "^4.1.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "NODE_ENV=development PORT=3050 react-scripts start",
-    "build": "react-scripts build",
+    "start:local": "dotenv -e .env.local react-scripts start",
+    "start:dev": "dotenv -e .env.development react-scripts start",
+    "build:dev": "dotenv -e .env.development react-scripts build",
+    "build:prod": "dotenv -e .env.production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -73,6 +77,8 @@
     "@types/lodash.debounce": "^4.0.6",
     "@types/react-mentions": "^4.1.3",
     "@types/react-router-dom": "^5.1.7",
+    "@types/uuid": "^8.3.1",
+    "dotenv-cli": "^4.0.0",
     "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
